# NEAT-JAX

./: README.md  debug.py  pyproject.toml
examples/: classification.py
results/classification/: best_genome.json
src/: genome.py  lineage.py  population.py  topology.py  trainer.py
