[project]
name = "neat-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evojax>=0.2.17",
    "gymnasium>=1.2.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jax[cpu,cuda12]>=0.7.1", # Always install CPU version
    "jax[tpu]>=0.7.1; sys_platform != 'darwin'",
    "networkx>=3.5",
    "opencv-python>=4.12.0.88",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "slimevolleygym>=0.1.0",
    "tqdm>=4.67.1",
]
